test/data/invalid-messages/too-short-dict.message
# Message with lots of different argument types

VALID_HEADER
END_LENGTH Header
ALIGN 8
START_LENGTH Body
TYPE DICT
STRING_ARRAY { 'int32', 'uint32' }
TYPE UINT32
UINT32 0x8765432
END_LENGTH Body
